# IA-HeLiC

./: CMakeLists.txt  README.md  package.xml
config/: calib_node.yaml
include/helix_calib/: bag_loader.h  calib_params.h  calib_result_writer.h  ceres_callbacks.h  ndt_aligner.h  odom.h  odom_aligner.h  sensor.h  sensor_system.h  surfel_map.h  trajectory.h  utils.h
include/ia_helic/: bag_loader.h  calib_params.h  calib_result_writer.h  ceres_callbacks.h  farthest_point_sampling.h  ndt_aligner.h  odom.h  odom_aligner.h  sensor.h  sensor_system.h  surfel_map.h  trajectory.h  utils.h
launch/: calib_node.launch
src/: calib_node.cpp  calib_result_writer.cpp  ndt_aligner.cpp  odom.cpp  odom_aligner.cpp  path_helper.cpp  sensor.cpp  sensor_system.cpp  surfel_map.cpp  trajectory.cpp  utils.cpp
