<?xml version="1.0"?>
<package format="2">
  <name>ia_helic</name>
  <version>0.0.0</version>
  <description>The IA-HeLiC package</description>

  <maintainer email="2231532@tongji.edu.cn">Zehao Yan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_export_depend>livox_ros_driver</build_export_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <build_depend>ndt_omp</build_depend>
  <build_export_depend>ndt_omp</build_export_depend>
  <exec_depend>ndt_omp</exec_depend>

</package>
